# silent-web

./: .env  Cargo.toml  deny.toml
api/: Cargo.toml
api/src/: lib.rs
commom/: Cargo.toml
commom/src/: lib.rs
common/: Cargo.toml
common/src/: cli.rs  error.rs  global_error_handler.rs  lib.rs  pagination.rs  response.rs  server.rs
common/src/database/: handle_panic.rs  migrate.rs  mod.rs
common/src/utils/: mod.rs  tree_data.rs
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: cli.rs  main.rs  migrate.rs
