[package]
name = "silent-web"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "common", "entity", "migration", "services"]

[workspace.package]
publish = false
authors = ["Hubert Shelley <hubertshelley@163.com>"]
homepage = "https://github.com/hubertshelley/silent"
license = "Apache-2.0"
repository = "https://github.com/hubertshelley/silent-web"
version = "0.1.0"

[dependencies]
dotenv = { version = "0.15.0", features = ["clap"] }
tokio = "1"

common = { path = "common" }
api = { path = "api" }
