[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish.workspace = true

[dependencies]
migration = { path = "../migration" }

anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
sea-orm = "0.12.15"
serde_json = "1.0.119"
serde = { version = "1.0.203", features = ["derive"] }
silent = "1.3.3"
dotenv = { version = "0.15.0", features = ["clap"] }
thiserror = "1.0.61"
